# zarathustra

./: .gitignore  README.md
.github/workflows/: bench_pr.yml  main.yml  nightly.yml  publish-zarathustra-npm.yml  release-docker.yml  release.yml  website.yml
zarathustra-cli/: index.d.ts  index.js  install.js  package.json  platform.js
zarathustra/stdlib/hashes/pedersen/: 512bit.zara
zarathustra/web/public/: demo.html  docs.html  index.html
zarathustra_analysis/src/: constant_resolver.rs  flat_propagation.rs
zarathustra_ast/src/common/: embed.rs
zarathustra_ast/src/flat/: mod.rs
zarathustra_ast/src/ir/: from_flat.rs
zarathustra_ast/src/typed/: identifier.rs  mod.rs  types.rs
zarathustra_ast/src/zir/: mod.rs
zarathustra_book/src/: gettingstarted.md
zarathustra_book/src/examples/: rng_tutorial.md  sha256example.md
zarathustra_book/src/language/: assembly.md  comments.md  constants.md  control_flow.md  functions.md  generics.md  imports.md  logging.md  types.md  variables.md
zarathustra_book/src/toolbox/: abi.md  experimental.md  trusted_setup.md  zokrates_js.md
zarathustra_cli/examples/: call_in_const.zara
zarathustra_cli/examples/alias/: import_alias.zara
zarathustra_cli/examples/book/mpc_tutorial/: test.sh
zarathustra_cli/examples/book/rng_tutorial/: test.sh
zarathustra_cli/examples/book/sha256_tutorial/: test.sh
zarathustra_cli/examples/imports/: inliner_state.zara
zarathustra_cli/src/: bin.rs
zarathustra_cli/tests/: integration.rs
zarathustra_core/src/: compile.rs  semantics.rs
zarathustra_core_test/tests/tests/: add.json  array_conditional.json  assert_array_equality.json  assert_one.json  bool_compare.json  cached_condition.json  complex_call.json  div.json  duplicate.json  fact_up_to_4.json  le.json  left_rotation.json  left_rotation_bits.json  native_le.json  native_le.zara  neg_pos.json  nested_loop.json  no_return.json  pass_by_value.json  precedence.json  range.json  right_rotation.json  right_rotation_bits.json  shadowing.json  single_return.json  split_bls.json  split_bn.json  spread_slice.json  ternary.json
zarathustra_core_test/tests/tests/arrays/: boolean_array_equality.json  fun_spread.json  fun_spread.zara  identity.json  select.json
zarathustra_core_test/tests/tests/assembly/: binary_check.json  bitify.json  constraint.json  division.json  is_equal.zara
zarathustra_core_test/tests/tests/constants/: array.json  array_size.json  bool.json  field.json  mixed.json  nested.json  propagate.json  propagate_embed.json  struct.json  tuple.json  uint.json
zarathustra_core_test/tests/tests/embed/: field_to_bool.json
zarathustra_fs_resolver/src/: lib.rs
zarathustra_js/: Cargo.toml  build.rs  index.js
zarathustra_js/src/: lib.rs
zarathustra_js/tests/: tests.js
zarathustra_parser/src/: lib.rs
zarathustra_parser/src/textmate/: package.json  zarathustra.tmLanguage.yaml
zarathustra_pest_ast/src/: lib.rs
zarathustra_stdlib/stdlib/ecc/: edwardsOrderCheck.zara
zarathustra_stdlib/stdlib/signatures/: verifyEddsa.zara
zarathustra_stdlib/tests/tests/: field.json
zarathustra_test/: Cargo.toml
zarathustra_test/src/: lib.rs
(+207 files in other folders)
